# cuda-example

./: .gitignore  README.md  benchmark.sh  build-cuda.sh  go.mod
common/: utils.go
example/: CMakeLists.txt  exampletest.cpp  library.cu  library.cuh
shared/: cuda_wrapper.go  cuda_wrapper_test.go
static/: cuda_wrapper.go  cuda_wrapper_test.go
